--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.password=chocolatefrog
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 
-avatars.dir.path=avatars
+path.to.avatars.folder= avatars
