--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=school
+server.port = 8080
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/hogwarts
 spring.datasource.username=student
 spring.datasource.password=chocolatefrog
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = validate
 spring.jpa.show-sql=true
 
 path.to.avatars.folder= avatars
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 
+spring.profiles.active= dev
